
2012-10-15  Shinwoo Kim (kimcinoo)

        * Add access features to toolbar items

2012-10-15  Prince Dubey Kumar <prince.dubey@samsung.com>

        * Fix genlist reorder mode item not being resized on genlist resize.

2012-10-17  Daniel Juyung Seo <seojuyung2@gmail.com>

       *  elm: Fixed on_focus_region() issue. Focused area should be scrolled
       only when it is needed. Now only entry needs this feature.

2012-10-18  Jaehwan Kim

        * Add the fitting the size of items according the viewport size.
        If the sum of item's min is larger than the viewport size in ELM_TOOLBAR_SHRINK_EXPAND mode,
        it can be scroll. And the end of the item is fitted on the end of the viewport.

2012-10-19  Tae-Hwan Kim (Bluezery)
        * Fixed wrong_calc_job parameter.

2012-10-19  ChunEon Park (Hermet)

        * Fix elm_transit image animation which last few frames are skipped.

2012-10-25  Michael Bouchaud (yoz)

        * some fix for promote and demote in genlist

2012-10-30  SeungGyun Kim

        * Added elm_notify_align_set/get and Deprecated elm_notify_orient_set/get

2012-10-30  ChunEon Park (Hermet)

        * Fix the transit to accept proxy object.

2012-10-31  TaeHwan Kim (Bluezery)

        * Don't crash glview even if you failed to create obj.

2012-11-02  ChunEon Park (Hermet)

        * Don't update map uv with image size for proxy object in elm_flip.

2012-11-06  Gustavo Lima (glima)

        * Fix typo on check's theme -- back from disabled state was broken.

2012-11-07  Mikael Sans (xhell)

        * Fix wrong parameter for thumbnail error in elm_icon.

2012-11-12  ChunEon Park (Hermet)

        * Support virtualkeypad, clipbard state shange signals from
		  conformant

2012-11-12  Jaehwan Kim

        * Add elm_toolbar_item_show/bring_in.
          It show or bring a specific item, when the toolbar can be scrolled.

2012-10-25  Michael Bouchaud (yoz)

        * Add missing selected event in elm_index (elm_index_item_selected_set)